--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ input{
   font-size: 1.2rem;
   color: grey;
 }
+
+.card-grid{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card {
+  align-content: center;
+  border: 1px solid grey;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.card p {
+  padding: 10px;
+  font-size: 1.2rem;
+  color: grey;
+  text-align: center;
+}
+
+.card img {
+  max-height: 170px;
+} 
